<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodPanda</string>
    <string name="forgot"><u>Forgot Password?</u></string>
    <string name="account"><u>Don\'t have an account? Sign up now</u></string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below:</string>
    <string name="new_password_min_4_characters">New Password (Min. 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="password_min_4_characters">Password (Min. 6 characters)</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="fav_rest">Favorite Items</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer\n</string>
    <string name="close_drawer" tools:ignore="PrivateResource">Close Drawer</string>
    <string name="todo">TODO</string>
    <string name="set_profile_icon">set profile icon</string>
    <string name="recyclerimage">recyclerimage</string>
    <string name="text">text</string>
    <string name="applogo">applogo</string>
    <string name="faqText1">Browse the menu, select the items you want, customize them if needed, and add them to your cart. When ready, tap Checkout, choose your delivery address, and confirm the payment method.</string>
    <string name="faqText2">We accept credit/debit cards, mobile wallets, cash on delivery, and other popular payment methods in your region.</string>
    <string name="faqText3">After placing your order, you can track it in real-time under the "My Orders" section of the app.</string>
    <string name="faqText4">Yes! Many menu items can be customized. Tap on the item and select options like toppings, portion size, or extras.</string>
    <string name="faqText5">Orders can be canceled only before they are accepted by the restaurant. Go to "My Orders," select the order, and tap "Cancel."</string>
    <string name="faqText6">If there’s an issue with your order, contact our support team through the app with details, and we’ll investigate and process a refund if applicable.</string>
    <string name="faqText7">If the order hasn’t been picked up by the delivery partner, you can update the address by contacting support through the app.</string>
    <string name="faqText8">Use the in-app chat feature or email us at support@yourapp.com for help with your queries.</string>
    <string name="faqText9">Absolutely! Rate your experience and provide feedback after your order is delivered through the "Rate &amp; Review" section.</string>
    <string name="forgot_email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="display_app_icon">display app icon</string>
    <string name="submit1">SUBMIT</string>
    <string name="welcome_to_foodpanda">Welcome to FoodPanda!</string>
    <string name="add">ADD</string>
    <string name="food_name">Food Name</string>
    <string name="_0_00">$0.00</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total :</string>
    <string name="place_order">Place Order</string>
    <string name="rs">Rs.0</string>
</resources>