<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/home_icon"/>

    <item
        android:title="@string/my_profile"
        android:id="@+id/profile"
        android:icon="@drawable/profile"/>

    <item
        android:title="@string/favourite_restaurants"
        android:id="@+id/favourites"
        android:icon="@drawable/favourite"/>

    <item
        android:title="@string/order_history"
        android:id="@+id/history"
        android:icon="@drawable/history"/>

    <item
        android:title="@string/faqs"
        android:id="@+id/FAQs"
        android:icon="@drawable/faq"/>

    <item
        android:title="@string/log_out"
        android:id="@+id/logout"
        android:icon="@drawable/logout"/>

    </group>

</menu>