<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:background="@color/purple_200"
    android:padding="16dp">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/panda"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/display_app_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/forgotemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_email_address"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="6dp"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#6d1b7b"
        android:padding="12dp"
        android:text="@string/submit1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/nextbtn">
    </Button>

</LinearLayout>