<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    android:padding="14dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/applogo"
        android:src="@drawable/panda">
    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="18sp"
        android:id="@+id/email"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="6dp"
        android:textColorHint="@color/black"
        android:autofillHints="">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="6dp"
        android:inputType="textWebPassword"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:id="@+id/lPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#6d1b7b"
        android:padding="12dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/btnLogin"
        android:textStyle="bold">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/forgot"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/forgot">
    </TextView>

</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:id="@+id/account">
    </TextView>

</RelativeLayout>

