<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FAQsFragment"
    android:padding="12dp">

   <androidx.cardview.widget.CardView
       android:id="@+id/expandable1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="20dp"
       app:contentPadding="20dp"
       app:cardElevation="10dp"
       android:layout_marginBottom="10dp">

      <LinearLayout
          android:id="@+id/layout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How do I place an order?"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>

         <TextView
             android:id="@+id/detailText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/faqText1"
             android:textSize="18sp"
             android:visibility="gone"
             android:textColor="@color/black"/>

      </LinearLayout>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/expandable2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="20dp"
       app:contentPadding="20dp"
       app:cardElevation="10dp"
       android:layout_marginBottom="10dp">

      <LinearLayout
          android:id="@+id/layout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="What payment method are accepted?"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>

         <TextView
             android:id="@+id/detailText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/faqText2"
             android:textSize="18sp"
             android:visibility="gone"
             android:textColor="@color/black"/>

      </LinearLayout>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/expandable3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="20dp"
       app:contentPadding="20dp"
       app:cardElevation="10dp"
       android:layout_marginBottom="10dp">

      <LinearLayout
          android:id="@+id/layout3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How do I request a refund?"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>

         <TextView
             android:id="@+id/detailText3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/faqText6"
             android:textSize="18sp"
             android:visibility="gone"
             android:textColor="@color/black"/>

      </LinearLayout>


   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/expandable4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="20dp"
       app:contentPadding="20dp"
       app:cardElevation="10dp"
       android:layout_marginBottom="10dp">

      <LinearLayout
          android:id="@+id/layout4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How do I contact customer support?"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>

         <TextView
             android:id="@+id/detailText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/faqText8"
             android:textSize="18sp"
             android:visibility="gone"
             android:textColor="@color/black"/>

      </LinearLayout>


   </androidx.cardview.widget.CardView>




</LinearLayout>