<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dp"
    android:layout_marginTop="6dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:ignore="MissingConstraints"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_icon"
                android:id="@+id/recyclerImage"
                android:layout_marginStart="12dp"
                android:padding="8dp"
                android:contentDescription="@string/recyclerimage">
            </ImageView>

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_toEndOf="@id/recyclerImage"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:layout_marginTop="12dp"
                android:id="@+id/rv_textview"/>

            <ImageButton
                android:id="@+id/FavRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav_restaurant"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_toEndOf="@id/rv_textview"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_toEndOf="@id/recyclerImage"
                android:layout_below="@+id/rv_textview"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:id="@+id/rv_textview2"/>

            <ImageView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/rate"
                android:layout_toEndOf="@id/FavRestaurant"
                android:layout_marginTop="14dp">
            </ImageView>

            <TextView
                android:id="@+id/ratingtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8.9/10"
                android:layout_toEndOf="@id/FavRestaurant"
                android:layout_below="@+id/rating">
            </TextView>

            <Button
                android:id="@+id/addBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/rv_textview2"
                android:layout_below="@+id/ratingtext"
                android:background="@drawable/rating_shape">
            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>